syntax = "proto3";

package sumpb;

option go_package = "sumpb/sumpb";

service SumService {
  rpc Sum (SumRequest) returns (SumResponse) {}
}

message SumRequest {
  int32 first_number = 1;
  int32 second_number  =2;
}

message SumResponse {
  int32 sum = 1;
}